# hive

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  Dockerfile.dev  README.md  RUST_REWRITE.md  dev-setup.sh  docker-compose.hybrid.yml  package.json  pnpm-lock.yaml  rust-toolchain.toml
api/: Cargo.toml
api/migrations/: 001_initial.sql
api/src/: auth.rs  db.rs  error.rs  legacy_import.rs  lib.rs  main.rs  mcp.rs  middleware.rs  pgq.rs  routes.rs  store.rs
api/src/routes/: admin.rs  artifacts.rs  auth.rs  conversations.rs  custom.rs  entities.rs  journal.rs  mail.rs  mcp.rs  mod.rs  oauth.rs  people.rs  search.rs  spa.rs  stream.rs  workspaces.rs
api/src/store/: actors.rs  cc_credentials.rs  config.rs  conversations.rs  custom_entities.rs  dashboard.rs  decisions.rs  entity_types.rs  entity_validation.rs  events.rs  identities.rs  import.rs  inbox.rs  journal.rs  links.rs  mail.rs  mod.rs  oauth.rs  outbox.rs  people.rs  phases.rs  profile.rs  projects.rs  recall.rs  search.rs  semantic.rs  sessions.rs  shares.rs  sources.rs  tasks.rs  tokens.rs  topics.rs  users.rs  workerstatus.rs  workspaces.rs
api/tests/: artifacts.rs  conversations.rs  migrations.rs  parity_smoke.rs  semantic_query.rs  vector_perf.rs  workspaces_lifecycle.rs
app/: Cargo.toml
app/src/: bridge_server.rs  main.rs
bridge/: Cargo.toml
bridge/src/: main.rs  proxy.rs
bridge/tests/: stdio.rs
core/: Cargo.toml
core/migrations/: 0001_baseline_marker.sql  0002_pgvector_embeddings.sql
core/src/: auth.rs  db.rs  keys.rs  lib.rs  mcp.rs  visibility.rs
core/src/blockstore/: mod.rs
core/src/fold/: mod.rs
core/src/index/: ann.rs  fts.rs  mod.rs
core/src/oplog/: mod.rs  reader.rs  segment.rs  writer.rs
core/src/store/: actors.rs  artifacts.rs  cc_credentials.rs  config.rs  contacts.rs  conversations.rs  core.rs  custom_entities.rs  dashboard.rs  decisions.rs  embed_backfill.rs  entity_types.rs  events.rs  identities.rs  import.rs  inbox.rs  journal.rs  links.rs  mail.rs  mail_sync.rs  maintenance.rs  mod.rs  outbox.rs  people.rs  phases.rs  profile.rs  projects.rs  recall.rs  search.rs  semantic.rs  sources.rs  tasks.rs  tokens.rs  topics.rs  users.rs  workerstatus.rs  workspaces.rs
core/tests/: blockstore.rs  crypto_shred.rs  cutover.rs  determinism.rs  embedding.rs  events_store.rs  fold_replay.rs  golden_retrieval.rs  keys.rs  mail_store.rs  mcp_tools.rs  migrations.rs  oplog.rs  reaper.rs  semantic_query.rs  sqlcipher_spike.rs  sqlite_index.rs  store_smoke.rs  tasks_store.rs  vector_perf.rs
core/tests/common/: mod.rs
core/tests/fixtures/: golden_retrieval.json
crates/hive-api/: Cargo.toml
crates/hive-api/src/: error.rs  input_policy.rs  main.rs  mentions.rs  state.rs
crates/hive-api/src/auth/: ai.rs  claims.rs  config.rs  dev.rs  device.rs  extractor.rs  federation.rs  keys.rs  layer.rs  mfa.rs  mod.rs  password.rs  policy.rs  resolve.rs  revocation.rs  risk.rs  rls.rs  store.rs  tokens.rs  totp.rs
crates/hive-api/src/mcp/: mod.rs  protocol.rs  tools.rs
crates/hive-api/src/routes/: ai.rs  ai_identities.rs  auth.rs  events.rs  graph.rs  health.rs  journal.rs  links.rs  mcp.rs  messages.rs  mfa.rs  mod.rs  notes.rs  oauth.rs  people.rs  projects.rs  search.rs  semantic.rs  stream.rs  tasks.rs  wire.rs  wire_sources.rs
crates/hive-cli/: Cargo.toml
crates/hive-cli/src/: api.rs  auth.rs  cli.rs  format.rs  journal_input.rs  main.rs
crates/hive-cli/src/cmd/: graph.rs  init.rs  journal.rs  links.rs  login.rs  mod.rs  notes.rs  search.rs  tasks.rs  wire.rs
crates/hive-cli/tests/: parity.rs
crates/hive-core/: Cargo.toml
crates/hive-core/src/: lib.rs
crates/hive-db/: Cargo.toml  SCHEMA.md
crates/hive-db/migrations/: 0001_initial.sql  0002_anchors_people.sql  0002_uuidv7_pks.sql  0003_anchors_people.sql  0004_signing_keys.sql  0005_auth_as_core.sql  0006_ai_identities_mcp.sql  0007_mfa_totp.sql  0008_device_codes.sql  0009_risk_signals.sql  0010_rls_data_authz.sql  0011_idp_federation_seam.sql  0012_events_and_slugs.sql  0013_split_ai_from_people.sql  0014_drop_slug_uniqueness.sql  0015_wire_sources.sql
crates/hive-db/src/: enums.rs  error.rs  lib.rs  pool.rs  schema.rs  slug.rs  types.rs
crates/hive-db/src/queries/: ai.rs  anchors.rs  embeddings.rs  events.rs  graph.rs  mod.rs  (+10 more)
crates/hive-desktop/: Cargo.toml  README.md
crates/hive-desktop/src/: db.rs  main.rs  parser.rs
crates/hive-desktop/ui/: app.slint
crates/hive-embed/: Cargo.toml
crates/hive-embed/src/: backfill.rs  lib.rs
crates/hive-md/: Cargo.toml
crates/hive-md/src/: lib.rs  parse.rs  rewrite.rs
crates/hive-md/tests/: mentions.rs  note_spawns.rs  round_trip.rs
crates/hive-migrate/: Cargo.toml
crates/hive-migrate/src/: main.rs
crates/hive-ui/: Cargo.toml  DESIGN-UI.md  README.md
crates/hive-ui/src/: api.rs  app.rs  auth.rs  lib.rs  main.rs  markdown.rs
crates/hive-ui/static/: compose-picker.js
crates/hive-ui/style/: main.css
crates/hive-wire-ingest/: Cargo.toml
crates/hive-wire-ingest/src/: main.rs
embed/: Cargo.toml
embed/src/: lib.rs  ollama.rs  onnx.rs  runtime.rs
importer/: Cargo.toml
importer/src/: lib.rs  main.rs
importer/tests/: import_e2e.rs  no_postgres_gate.rs
importer/tests/fixtures/: legacy_schema.sql  seed.sql
jmap-sync/: Cargo.toml
jmap-sync/src/: backfill.rs  client.rs  delta.rs  doorbell.rs  extract.rs  lib.rs  quote.rs
jmap-sync/tests/: quote_corpus.rs
jmap-sync/tests/corpus/: 01_gmail_reply.in.txt  01_gmail_reply.out.txt  02_nested_quotes.in.txt  02_nested_quotes.out.txt  03_outlook_toppost.in.txt  03_outlook_toppost.out.txt  04_forwarded.in.txt  04_forwarded.out.txt  05_signature.in.txt  05_signature.out.txt  06_newsletter_footer.in.txt  06_newsletter_footer.out.txt  07_no_quotes.in.txt  08_quote_only.in.txt  09_mobile_closer.in.txt  09_mobile_closer.out.txt
mail/: Cargo.toml
mail/src/: attachments.rs  lib.rs  main.rs  sink.rs
mail/tests/: stalwart_e2e.rs
mcp/: Cargo.toml
mcp/src/: lib.rs
worker/: Cargo.toml
worker/src/: embed.rs  lib.rs  main.rs
worker/tests/: chunked_backfill.rs  cycle.rs  embed_budget.rs
(+100 files in other folders)
