[workspace]
members = ["shared", "api", "worker", "mcp"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.84"
authors = ["Pia <pia@beesroadhouse.com>"]
license = "MIT"
repository = "https://github.com/bees-roadhouse/hive"

[workspace.dependencies]
# --- Core ---
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# --- Async / HTTP ---
axum = { version = "0.8", features = ["ws", "multipart"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
hyper = { version = "1.5", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# --- Database ---
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono", "uuid"] }

# --- Auth / Crypto ---
argon2 = "0.5"
jsonwebtoken = "9.3"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
bcrypt = "0.16"

# --- Time / IDs ---
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
nanoid = "0.4"

# --- Config / Env ---
config = "0.15"
dotenvy = "0.15"

# --- Embeddings / ML ---
# Using ort (ONNX Runtime) for cross-platform HF model support
# Alternative: candle-core for pure Rust (limited model support)
ort = { version = "2.0", features = ["ndarray"] }
ndarray = { version = "0.16", features = ["serde"] }
tokenizers = "0.21"
rayon = "1.10"

# --- MCP ---
# We'll build MCP protocol manually over stdio/SSE
# No stable Rust crate yet; the protocol is simple JSON-RPC 2.0

# --- Shared workspace crates ---
hive-shared = { path = "shared" }
