[workspace]
members = ["shared", "embed", "api", "worker", "jmap-sync", "mail"]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2021"
rust-version = "1.84"
authors = ["Pia <pia@beesroadhouse.com>"]
license = "MIT"
repository = "https://github.com/bees-roadhouse/hive"

[workspace.dependencies]
# --- Core ---
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# --- Async / HTTP ---
axum = { version = "0.8", features = ["ws", "multipart"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
hyper = { version = "1.5", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# --- Database ---
# postgres is the datastore; sqlite stays only so the import path can READ an
# uploaded legacy hive.db file (api/src/legacy_import.rs) when migrating data in.
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "sqlite", "migrate", "chrono", "uuid"] }
# Native `vector` column binding (embeddings.vec_v). 0.4 pairs with sqlx 0.8.
pgvector = { version = "0.4", features = ["sqlx"] }

# --- Auth / Crypto ---
jsonwebtoken = "9.3"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
scrypt = "0.11"
subtle = "2.6"
hex = "0.4"

# --- Time / IDs ---
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
nanoid = "0.4"

# --- Config / Env ---
dotenvy = "0.15"

# --- Embeddings / ML (the hive-embed crate wraps these) ---
ort = { version = "2.0.0-rc.12", features = ["ndarray"] }
ndarray = { version = "0.16", features = ["serde"] }
# default-features off: esaxx_fast statically links the MSVC C++ runtime and
# collides with onnxruntime's dynamic CRT on Windows; onig avoids that.
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
# 0.4+: huggingface.co serves relative redirect Locations that 0.3 can't follow.
hf-hub = { version = "0.4", default-features = false, features = ["ureq", "default-tls"] }

# --- Feeds ---
rss = "2.0"
atom_syndication = "0.12"

# --- Mail (the jmap-sync crate wraps these) ---
# Pinned exact: jmap-client went dormant 2024-01..2025-09; the containment rule
# is that only jmap-sync/src/client.rs may import it (sized for a reqwest+serde
# rewrite if it goes dark again). ring over the default aws-lc-rs to match
# reqwest's rustls provider; no websockets (the EventSource doorbell is SSE).
jmap-client = { version = "=0.4.2", default-features = false, features = ["async", "ring"] }
html2text = "0.17"
async-trait = "0.1"
futures-util = "0.3"

# --- Shared workspace crates ---
hive-shared = { path = "shared" }
hive-embed = { path = "embed" }
