[workspace]
members = ["shared", "embed", "core", "jmap-sync", "app"]
resolver = "2"

[workspace.package]
version = "0.7.0"
edition = "2021"
rust-version = "1.84"
authors = ["Pia <pia@beesroadhouse.com>"]
license = "MIT"
repository = "https://github.com/bees-roadhouse/hive"

[workspace.dependencies]
# --- Core ---
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# --- HTTP client (source polling, outbox webhooks) ---
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# --- Database ---
# Postgres left the workspace at the PR 1.6 cutover. The PR 1.7 importer crate
# (the one remaining Postgres reader) declares its own sqlx dependency so
# "no Postgres in the app" stays grep-auditable.

# --- Crypto (credential vault: reversible encryption of mail credentials) ---
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"

# --- Time / IDs ---
chrono = { version = "0.4", features = ["serde"] }
nanoid = "0.4"

# --- Embeddings / ML (the hive-embed crate wraps these) ---
ort = { version = "2.0.0-rc.12", features = ["ndarray"] }
ndarray = { version = "0.16", features = ["serde"] }
# default-features off: esaxx_fast statically links the MSVC C++ runtime and
# collides with onnxruntime's dynamic CRT on Windows; onig avoids that.
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
# 0.4+: huggingface.co serves relative redirect Locations that 0.3 can't follow.
hf-hub = { version = "0.4", default-features = false, features = ["ureq", "default-tls"] }

# --- Feeds ---
rss = "2.0"

# --- Mail (the jmap-sync crate wraps these) ---
# Pinned exact: jmap-client went dormant 2024-01..2025-09; the containment rule
# is that only jmap-sync/src/client.rs may import it (sized for a reqwest+serde
# rewrite if it goes dark again). ring over the default aws-lc-rs to match
# reqwest's rustls provider; no websockets (the EventSource doorbell is SSE).
jmap-client = { version = "=0.4.2", default-features = false, features = ["async", "ring"] }
html2text = "0.17"
async-trait = "0.1"
futures-util = "0.3"

# --- Durable layer (PR 1.4: op log + blockstore + keys; record format frozen) ---
# CBOR encoding of the frozen record envelope and blob manifests.
ciborium = "0.2"
# Content addressing (block ids, frame chain) + keyed-hash/derive-key KDF modes.
blake3 = "1.8"
# Content-defined chunking for large blobs (v2020 gear table).
fastcdc = "4.0"
# XChaCha20-Poly1305 AEAD for segment frames, blob blocks, and key wraps.
# 0.10 line: 0.11 raises MSRV to 1.85, above the workspace's 1.84.
chacha20poly1305 = "0.10"
# Argon2id KEK derivation for the passphrase export wrap (RFC 9106 params).
argon2 = "0.5"
# OS keychain custody of the master key. Pure-rust zbus Secret Service on Linux
# (headless CI still links; no libdbus); v3 line because v4 raises MSRV to 1.88.
keyring = { version = "3.6", features = ["apple-native", "windows-native", "async-secret-service", "async-io", "crypto-rust"] }
# base32 recovery codes + lowercase-hex block filenames.
data-encoding = "2"

# --- Derived index (PR 1.5/1.6: the SQLite store) ---
# Bundled SQLCipher (SQLite 3.45, FTS5 compiled in, JSON core) with vendored
# OpenSSL so mac/Windows need no system crypto lib — the exact feature combo
# the PR 1.4 spike proved (core/tests/sqlcipher_spike.rs). The 0.32 pin dates
# from the sqlx-sqlite `links = "sqlite3"` collision; sqlx left the workspace
# at the 1.6 cutover, so the pin can lift whenever convenient.
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }

# --- Dev/test only ---
# Hermetic tempdir stores for the oplog/blockstore/keys tests.
tempfile = "3"

# --- Shared workspace crates ---
hive-shared = { path = "shared" }
hive-embed = { path = "embed" }
