[package]
name = "hive-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
pgvector = { workspace = true }
reqwest = { workspace = true }

hive-shared = { workspace = true }
hive-embed = { workspace = true }
hive-core = { path = "../core" }

# Auth
jsonwebtoken = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
subtle = { workspace = true }
hex = { workspace = true }


# Misc
nanoid = { workspace = true }
uuid = { workspace = true }
dotenvy = { workspace = true }
async-stream = "0.3"
futures = "0.3"
urlencoding = "2.1"

[dev-dependencies]
tempfile = "3"
