[package]
name = "hive-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# The desktop shell (DIRECTION.md D17): Dioxus on the system webview now,
# Blitz native rendering later; RSX handlers call hive-core in-process.
# Pinned to 0.6: dioxus 0.7.9 desktop renders a blank page on WebKitGTK 2.5x
# under plain cargo builds (verified by screenshot A/B on 2026-07-10);
# revisit the pin when upstream fixes it.
dioxus = { version = "0.6", features = ["desktop"] }
hive-core = { path = "../core" }
# GUI import: first-launch onboarding drives the importer LIBRARY in-process
# (dry-run plan, then the one-shot migration). The Postgres fence still
# holds — app sources stay token-free and only app/ may take this dependency
# (importer/tests/no_postgres_gate.rs states and enforces the full rule).
hive-import = { path = "../importer" }
hive-shared = { workspace = true }
hive-embed = { workspace = true }
anyhow = { workspace = true }
# The import runs on its own OS thread under a dedicated current-thread
# runtime (the CLI's exact shape); the UI awaits a oneshot for the result.
tokio = { workspace = true }
