[package]
name = "hive-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# The desktop shell (DIRECTION.md D17): Dioxus on the system webview now,
# Blitz native rendering later; RSX handlers call hive-core in-process.
# Pinned to 0.6: dioxus 0.7.9 desktop renders a blank page on WebKitGTK 2.5x
# under plain cargo builds (verified by screenshot A/B on 2026-07-10);
# revisit the pin when upstream fixes it.
dioxus = { version = "0.6", features = ["desktop"] }
hive-core = { path = "../core" }
# GUI import: first-launch onboarding drives the importer LIBRARY in-process
# (dry-run plan, then the one-shot migration). The Postgres fence still
# holds — app sources stay token-free and only app/ may take this dependency
# (importer/tests/no_postgres_gate.rs states and enforces the full rule).
hive-import = { path = "../importer" }
hive-shared = { workspace = true }
hive-embed = { workspace = true }
anyhow = { workspace = true }
# The import runs on its own OS thread under a dedicated current-thread
# runtime (the CLI's exact shape); the UI awaits a oneshot for the result.
tokio = { workspace = true }
# Journal bodies render as GFM Markdown (task lists, tables, strikethrough,
# autolinks, fenced code — hive's Obsidian-style conventions). comrak has GFM
# built in and is pure Rust (no C, clean for the flatpak build). The rendered
# HTML is authored by the user AND by AI identities and displays inside the
# app's own WebKit context, so it MUST be sanitized (D17) before it reaches
# dangerous_inner_html: ammonia strips <script>, event handlers, and remote
# resource loads against a strict allowlist. Both are already in the lock
# (present transitively), so this pins the versions we render through.
comrak = { version = "0.39", default-features = false }
ammonia = "4"
# Contact/task detail views stage typed field values as JSON (the same
# serde_json::Map<String, Value> the custom-entity store speaks). Already in
# the lock transitively (hive-core/hive-shared); this pins it as a direct dep.
serde_json = { workspace = true }
# Mail attachments serve from the local blockstore as base64 data: URLs that a
# tiny in-webview anchor click downloads (no external `open` dependency, no
# network). base64 is already in the lock (hive-core uses it); this pins it as a
# direct dep for the reader's attachment path.
base64 = { workspace = true }
# The bridge socket server (D25 proxy mode) logs through tracing like the
# store's drivers do; dioxus's launch installs the subscriber.
tracing = { workspace = true }

[target.'cfg(unix)'.dependencies]
# Peer-credential check on the bridge socket (D25): same-euid clients only.
# rustix over libc to match core's flock choice (core/src/store/core.rs).
rustix = { version = "1.1", features = ["process"] }
