[package]
name = "hive-bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Thin by design (D25, proxy mode): the bridge is a stdio ↔ unix-socket pump
# with a handshake. No store, no keychain, no async runtime, no HTTP stack —
# stdout is the protocol channel, stderr is the log. hive-shared carries the
# socket wire contract (bridge_proto); protocol handling lives app-side in
# hive-core. Keeping hive-core OUT of this list is deliberate: it is what
# makes `cargo install --path bridge` a seconds-long build (no SQLCipher).
hive-shared = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
# The tests stand up an in-process socket host — a real Store served through
# core's frame layer over a tokio UnixListener, exactly the app's shape — so
# the binary is exercised end-to-end without a GUI.
hive-core = { path = "../core" }
hive-embed = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }
