[package]
name = "hive-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }

hive-shared = { workspace = true }
hive-embed = { workspace = true }

# Crypto primitives for the credential vault (mail account credentials at rest)
rand = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }

# Feeds (sources polling)
rss = { workspace = true }

# Misc
nanoid = { workspace = true }
# Credential vault: reversible encryption of mail credentials at rest
# (Phase 3 replaces this with the OS keychain).
aes-gcm = "0.10"

# Durable layer (PR 1.4): op log envelope + segments, blockstore, key management
ciborium = { workspace = true }
blake3 = { workspace = true }
fastcdc = { workspace = true }
chacha20poly1305 = { workspace = true }
argon2 = { workspace = true }
keyring = { workspace = true }
data-encoding = { workspace = true }

# The store (PR 1.6 cutover): the SQLCipher-encrypted SQLite index the fold
# projects into. sqlx/pgvector left core here (the PR 1.7 importer crate
# re-adds sqlx for itself), so the `links = "sqlite3"` collision that pinned
# rusqlite to 0.32 is gone — the pin can lift whenever convenient.
rusqlite = { workspace = true }

[dev-dependencies]
# Hermetic tempdir stores for the oplog/blockstore/keys/store tests.
tempfile = { workspace = true }
