[package]
name = "hive-embed"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["onnx"]
# The real BGE engine (ort + tokenizers + hf-hub). Off → hash-only (CI-light).
onnx = ["dep:ort", "dep:tokenizers", "dep:hf-hub"]

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }

ort = { workspace = true, optional = true }
# Feature trims live on the workspace pins (CRT link clash / HF redirect notes there).
tokenizers = { workspace = true, optional = true }
hf-hub = { workspace = true, optional = true }
