[package]
name = "jmap-sync"
description = "JMAP mailbox sync: session discovery, backfill, delta drive, and plaintext extraction behind CursorStore/MailSink traits"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
html2text = { workspace = true }
jmap-client = { workspace = true }
futures-util = { workspace = true }
