[package]
name = "hive-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
reqwest = { workspace = true }
dotenvy = { workspace = true }
futures = "0.3"

hive-shared = { workspace = true }
hive-embed = { workspace = true }

# Feed parsing
rss = { workspace = true }
atom_syndication = { workspace = true }
