[package]
name = "hive-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
dotenvy = { workspace = true }

hive-shared = { workspace = true }
hive-embed = { workspace = true }
hive-api = { path = "../api" }

[dev-dependencies]
tempfile = "3"
