[package]
name = "hive-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "axum HTTP API exposing hive-db operations"

[[bin]]
name = "hive-api"
path = "src/main.rs"

[dependencies]
hive-db = { workspace = true }
hive-md = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
directories = { workspace = true }
uuid = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"

# Auth (Phase 1): JWT verify + Ed25519 keygen for the local AS.
jsonwebtoken = { workspace = true }
ring = { workspace = true }
base64 = { workspace = true }
# Auth (Phase 2): argon2id password hashing + CSPRNG for refresh tokens.
argon2 = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
# Auth (Phase 4): RFC 6238 TOTP via hmac-sha1, at-rest secret encryption, base32.
hmac = { workspace = true }
sha1 = { workspace = true }
base32 = { workspace = true }
chacha20poly1305 = { workspace = true }
# Direct DB access for the auth tables (signing_keys now; users/sessions in
# Phase 2+). hive-db owns the shared schema + migrations; hive-api queries it.
sqlx = { workspace = true }

[features]
# `dev` enables the dev-mode auth bypass (§5.8). It is DELIBERATELY NOT a
# default feature: the bypass code path is compiled in ONLY when this feature
# is on, so a release build (`cargo build -p hive-api`, no `--features dev`)
# does not contain it at all. That compile-time gate is the primary safeguard.
#
# CI GUARD: production/release images MUST be built without `--features dev`.
# The release build command never passes it; a CI check asserts the bypass
# symbol is absent from the release artifact. See §5.8.
default = []
dev = []
