[package]
name = "hive-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "hive ... shared-state CLI (drop-in replacement for python ~/.hive/hive.py)"

[[bin]]
name = "hive"
path = "src/main.rs"

[dependencies]
hive-db = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
