[package]
name = "hive-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "hive ... shared-state CLI (HTTP client for hive-api; drop-in replacement for python ~/.hive/hive.py)"

[[bin]]
name = "hive"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
# Auth Phase 3 (§3.2): PKCE (base64url + sha256), CSPRNG verifier, and the
# cross-platform config-dir for the cached-token file.
base64 = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
directories = { workspace = true }
