[package]
name = "hive-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Shared domain types (DTOs) for the hive HTTP API. Consumed by hive-ui (leptos web canvas) and the future iPad client via uniffi-generated Swift bindings."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
