[package]
name = "hive-db"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Shared sqlite layer + types for the hive shared-state DB."

[dependencies]
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
directories = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
