[package]
name = "hive-embed"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Embedder + reranker client for hybrid search. Strategy pending Cera review (DESIGN.md option A vs B vs C)."

[dependencies]
hive-db = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
