[package]
name = "hive-migrate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "One-shot copy: ~/.hive/hive.db (sqlite) -> postgres."

[[bin]]
name = "hive-migrate"
path = "src/main.rs"

[dependencies]
rusqlite = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "chrono", "uuid"] }
pgvector = { version = "0.4", features = ["sqlx"] }
tokio = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
