[package]
name = "hive-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "leptos SSR UI for the hive shared-state DB"

[[bin]]
name = "hive-ui"
path = "src/main.rs"

[dependencies]
hive-db = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
leptos = { version = "0.7", features = ["ssr"] }
